2008-12-09  Vladimir Tzankov  <vtzankov@gmail.com>

	* spvw_garcol.d (gc_sweep1_varobject_page): allow zero sized holes in the
	heap holes array. fixes corner case in gen0 GC
	(fill_varobject_heap_holes): handle zero sized holes

2008-12-08  Vladimir Tzankov  <vtzankov@gmail.com>

	* spvw.d (signal_handler_thread): fix SIG_TIMEOUT_CALL in g++ threads
	builds

2008-12-08  Sam Steingold  <sds@gnu.org>

	* spvw.d (init_multithread_special_symbols): fix g++ compilation

2008-12-08  Sam Steingold  <sds@gnu.org>

	* modules/clx/new-clx/clx.lisp (closed-display)
	(connection-failure, device-busy): remove redefinitions

2008-12-07  Sam Steingold  <sds@gnu.org>

	* pathname.d (directory_search_1subdir): accept subdirtail instead
	of subdir to fix GC-safety bug (&Car(STACK) is not gc-visible)
	(directory_search): fix directory_search_1subdir invocation
	Reported by Vladimir Tzankov

2008-12-07  Sam Steingold  <sds@gnu.org>

	* makemake.in (XCLFLAGS): remove "-x none" which is no longer necessary
	<http://article.gmane.org/gmane.lisp.clisp.devel:19684>

2008-12-07  Vladimir Tzankov  <vtzankov@gmail.com>

	GENERATIONAL_GC (with threads) VM page protection done right
	* spvw_garcol.d (fill_varobject_heap_holes): remove holes_count
	parameter. with GENERATIONAL_GC in generation 0 the holes array
	is filled with memory regions that have to be left with
	PROT_READ_WRITE protection
	(gar_col_normal): initialize the end of heap holes array with
	invalid item.
	* spvw_genera1.d (build_old_generation_cache): add additional
	parameter - array of VM paged aligned memory regions that have to
	be left with PROT_READ_WRITE protection
	* spvw_memfile.d (loadmem_from_handle): pass NULL to
	build_old_generation_cache()
	* spvw_heap.d (struct read_write_region): remove it

2008-12-06  Vladimir Tzankov  <vtzankov@gmail.com>

	fix SPVW_PURE build
	* spvw_garcol.d (struct varobj_mem_region): add heapnr for SPVW_PURE
	with threads builds